2003-12-16  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wap-appl.c: added access-log logging of upstream HTTP server failures
      with HTTP response code 502 (bad gateway). So even in case the HTTP server
      can not be resolved or is not reachable, user's will be logged with a
      request access entry in wapbox's access-log.
      [Msg-ID: <3FDDB666.F31F5648@wapme-systems.de>]

2003-12-11  Stipe Tolj  <tolj@wapme-systems.de>
    * test/fakesmsc.c: changed randomization behaviour to allow adding randomized
      numbers as last message word. Use the -r switch as bitmask.

2003-12-09  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/wsp_headers.[ch]: fixing prototype declarations of depending routines
      for external applications using WSP header functions.

2003-12-09  Alexander Malysh  <a.malysh@centrium.de>
    * gw/dlr.[ch], gw/dlr_p.h, gwlib/cfg.[ch], gwlib/log.[ch], gwlib/mime.h,
      radius/radius_acct.c, wap/wsp_headers.c: fixed compiler warnings.

2003-12-08  Alexander Malysh  <a.malysh@centrium.de>
    * configure.in, configure: changed 'head -1' call to propperly 'head -n 1'.
    * gwlib/gw_uuid.[ch], gwlib/gwlib.c: added uuid_init() and uuid_shutdown()
      functions. uuid_init() just open the random device (if any) because otherwise
      it's possible that we open device twice (race condition).

2003-12-08  Stipe Tolj  <tolj@wapme-systems.de>
    Universal Unique Identifier (UUID) Patch by Alexander.
    * configure[.in]: adding word size, srandom() and various header checks 
      needed for gwlib/gw_uuid.[ch].
    * gw-config.h.in: some additional #undef's
    * gw/bb_[alog|smscconn|store].c, gw/smsbox.c, gw/urltrans.c, 
      gw/smsc/smsc_[fake|http|soap].c: changing ID handling to UUID routines.
    * gw/msg-decl.h, gw/msg.[ch]: exchanged INTEGER(id) to UUID(id) and added
      adequate handling of UUID in msg_foobar() routines.
    * gw/smsc/smsc_fake.c: added 'dlr-mask' msg type handling. 