@@ -1,4 +1,9 @@
 2003-12-16  Stipe Tolj  <tolj@wapme-systems.de>
+    * gw/smsc/smpp_pdu.c: removed debug output while packing optional v3.4 
+      parameters and added better debug output for dumping of the PDU. 
+      No logic change.
+
+2003-12-16  Stipe Tolj  <tolj@wapme-systems.de>
     * gw/wap-appl.c: added access-log logging of upstream HTTP server failures
       with HTTP response code 502 (bad gateway). So even in case the HTTP server
       can not be resolved or is not reachable, user's will be logged with a
